# HDA_lung_disease_pred

./: .gitignore  HDA_project_C3.ipynb  README.md  pyproject.toml  run_optimization.py  test_optimization.py
HDA_lung_disease_pred/models/: cnn_baseline.py  cnn_unet_model.py
HDA_lung_disease_pred/scripts/: optimization.py  train.py
HDA_lung_disease_pred/utils/: data_preparation.py  eda_utils.py  plot_results.py  train_utils.py
logs/: cnn_baseline_64_history.json
project_c3/models/: cnn_baseline.py
src/project_c3/scripts/: train.py
src/project_c3/utils/: data_preparation.py  train_utils.py
tests/: conftest.py  test_eda_utils.py
utils/: eda_utils.py
